--- a/package.json
+++ b/package.json
@@ -8,26 +8,31 @@
     "start": "ts-node src/index.ts",
     "start:dev": "nodemon --config nodemon.json",
     "start:prod": "npx tsc  && node dist/index.js",
+    "start:test": "npx tsc && jasmine",
     "build": "npx tsc",
     "prettier": "prettier --config .prettierrc src/**/*.{ts,js} --write",
-    "lint": "eslint src/index.ts"
+    "lint": "eslint ./src/** --fix",
+    "jasmine": "jasmine"
   },
   "dependencies": {
+    "express": "^4.18.2",
+    "jasmine": "^4.4.0",
+    "jasmine-spec-reporter": "^7.0.0",
+    "sharp": "^0.31.1",
+    "supertest": "^6.3.0"
+  },
+  "devDependencies": {
     "@types/express": "^4.17.14",
+    "@types/jasmine": "^4.3.0",
     "@types/node": "^18.8.4",
+    "@typescript-eslint/eslint-plugin": "^5.40.0",
+    "@typescript-eslint/parser": "^5.40.0",
     "eslint": "^8.25.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "express": "^4.18.2",
-    "nodemon": "^2.0.20",
-    "prettier": "^2.7.1",
-    "sharp": "^0.31.1",
     "ts-node": "^10.9.1",
-    "tslib": "^2.4.0",
-    "typescript": "^4.8.4"
-  },
-  "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.40.0",
-    "@typescript-eslint/parser": "^5.40.0"
+    "typescript": "^4.8.4",
+    "nodemon": "^2.0.20",
+    "prettier": "^2.7.1"
   }
 }
