--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "Image-API-Process",
   "version": "1.0.0",
   "main": "index.js",
-  "repository": "https://github.com/iSultanz/Image-API-Process",
   "license": "MIT",
   "scripts": {
     "start": "ts-node src/index.ts",
@@ -16,13 +15,13 @@
   },
   "dependencies": {
     "express": "^4.18.2",
-    "jasmine": "^4.4.0",
-    "jasmine-spec-reporter": "^7.0.0",
-    "sharp": "^0.31.1",
-    "supertest": "^6.3.0"
+    "sharp": "^0.31.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.14",
+    "jasmine": "^4.4.0",
+    "jasmine-spec-reporter": "^7.0.0",
+    "supertest": "^6.3.0",
     "@types/jasmine": "^4.3.0",
     "@types/node": "^18.8.4",
     "@typescript-eslint/eslint-plugin": "^5.40.0",
